Fixed top-panel bugs, overflow-x hidden removed

--- a/Styles/MAIN.css
+++ b/Styles/MAIN.css
@@ -31,7 +31,7 @@ code, kbd, pre, samp { font-family: monospace, serif; _font-family: 'courier new
 /******************************** GLOBALS ****************************/
 
 
-body { background-color:white; border:0; margin:0 auto; padding:0; overflow-x:hidden; }
+body { background-color:white; border:0; margin:0 auto; padding:0; }
 
 @font-face { font-family:Bitter-Regular; src:url('Fonts/Bitter-Regular.otf'); }
 
@@ -45,7 +45,7 @@ h1, h2, h3 { font-family:Bitter-Regular; text-align:center; }
 
 .outer-page-wrap { margin:0 auto; width: 100%; display: block; }
 
-.page-header { background-color:#1884E9; color:white; width:100%; min-width: 1302px; height:165px;	margin:-70px auto 0; text-align:center;	padding-top:5px; font:26px Bitter-Regular; }
+.page-header { background-color:#1884E9; color:white; width:100%; min-width: 1202px;1302px; height:165px;	margin:-70px auto 0; text-align:center;	padding-top:5px; font:26px Bitter-Regular; }
 
 .pointer-onhover:hover { cursor:pointer; }
 
@@ -69,9 +69,9 @@ ul { list-style-type: none; }
 
 .header-wrapper-fixed {	z-index:50;	position:fixed; top:0; left:0; }
 
-.header { width:100%; min-width:1300px; height:65px; background-color:#1884E9; font-family: Ubuntu; margin: -60px auto 0; border:1px outset transparent; }
+.header { width:100%; min-width: 1200px;1300px; height:65px; background-color:#1884E9; font-family: Ubuntu; margin: -60px auto 0; border:1px outset transparent; }
 
-.header .header-menu { width:1300px; margin: auto; }
+.header .header-menu { width: inherit;1300px; margin: auto; }
 
 .header .header-menu ul { list-style:none; width:730px; display: inline-block; padding-left: 10px;   }
 
@@ -149,7 +149,7 @@ img#back-img { min-height: 100%; min-width: 100%; position:fixed; top:-140px; }
 /********************    BUY.PHP    ************************/
 
 
-#buy-container { width:1270px; min-height:1050px; margin:0 auto 100px; padding:0; top:10px; overflow: hidden; }
+#buy-container { width:1200px;1270px; min-height:1050px; margin:0 auto 100px; padding:0; top:10px; overflow: hidden; }
 
 #buy-container aside { width:300px; float:left; border:1px solid #d3d3d3; border-left:none; border-right:none; background-color:white; position:absolute; top:80px; margin-left: 45px; text-align:center; }
 
@@ -365,6 +365,8 @@ img#back-img { min-height: 100%; min-width: 100%; position:fixed; top:-140px; }
 #select-subject { width:150px; border-style:outset;	color:black; }
 
 #subject { width:310px; }
+
+#image-search-link { font-size: 15px; margin-left: 10px; text-decoration: none; color: red; }
 
 #rent-price { width:150px; }
 
